--- a/forgot-password.html
+++ b/forgot-password.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="user-info">
-                <a href="home.html" class="btn btn-secondary btn-small"><i class="fas fa-arrow-left"></i> Back to Login</a>
+                <a href="index.html" class="btn btn-secondary btn-small"><i class="fas fa-arrow-left"></i> Back to Login</a>
             </div>
         </div>
     </header>
