--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <h1>Welcome to WSU Dormitory System</h1>
                 <p>Providing comfortable, secure, and well-managed accommodation for over 1,500 students at Wolayita Sodo University. Experience quality student living with modern facilities and efficient management.</p>
                 <div class="cta-buttons">
-                    <a href="login.html" class="btn btn-login"><i class="fas fa-sign-in-alt"></i> Student/Admin Login</a>
+                    <a href="home.html" class="btn btn-login"><i class="fas fa-sign-in-alt"></i> Student/Admin Login</a>
                     <a href="#gallery" class="btn btn-secondary"><i class="fas fa-images"></i> View Gallery</a>
                 </div>
             </div>
