--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
     <!-- Header with Navigation -->
+     <!-- Add this inside your header-content div, after the logo -->
+<button class="menu-toggle" id="menuToggle">
+    <i class="fas fa-bars"></i>
+</button>
     <header>
         <div class="container header-content">
             <div class="logo">
@@ -334,6 +338,34 @@
                 }
             });
         });
+        // Mobile menu toggle
+const menuToggle = document.getElementById('menuToggle');
+const mainNav = document.querySelector('.main-nav');
+
+if (menuToggle) {
+    menuToggle.addEventListener('click', function() {
+        mainNav.classList.toggle('active');
+        menuToggle.innerHTML = mainNav.classList.contains('active') 
+            ? '<i class="fas fa-times"></i>' 
+            : '<i class="fas fa-bars"></i>';
+    });
+    
+    // Close menu when clicking outside
+    document.addEventListener('click', function(event) {
+        if (!mainNav.contains(event.target) && !menuToggle.contains(event.target)) {
+            mainNav.classList.remove('active');
+            menuToggle.innerHTML = '<i class="fas fa-bars"></i>';
+        }
+    });
+    
+    // Close menu when clicking on a link
+    document.querySelectorAll('.main-nav a').forEach(link => {
+        link.addEventListener('click', function() {
+            mainNav.classList.remove('active');
+            menuToggle.innerHTML = '<i class="fas fa-bars"></i>';
+        });
+    });
+}
     </script>
 </body>
 </html>
