--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="#gallery">Gallery</a>
                 <a href="#contact">Contact</a>
                 <div class="nav-buttons">
-                    <a href="login.html" class="btn btn-login">Login</a>
+                    <a href="home.html" class="btn btn-login">Login</a>
                     <a href="register.html" class="btn btn-primary">Register</a>
                 </div>
             </nav>
