wsu image link add

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <p>Our system manages all aspects of student accommodation including room assignments, fee payments, maintenance requests, and more.</p>
                 </div>
                 <div class="about-image">
-                    <img src="https://images.unsplash.com/photo-1562774053-701939374585?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="WSU Dormitory">
+                    <img src="https://tse1.mm.bing.net/th/id/OIP.JggBGqkbDk0vwbWM9l7amwAAAA?rs=1&pid=ImgDetMain&o=7&rm=3" alt="WSU Dormitory">
                 </div>
             </div>
         </div>
